# test_cursor

backend/: .env.example  README.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/middleware/: errors.py
backend/app/models/: schemas.py
backend/app/providers/: __init__.py
backend/app/providers/lookup/: __init__.py  base.py  postgres.py  sheets.py
backend/app/routes/: health.py  quote.py
backend/app/services/: llm.py  pdf.py  telegram.py
backend/app/utils/: hash.py
backend/tests/: conftest.py  test_lookup.py  test_quote_api.py  test_validation.py
cpq-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
cpq-frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  validation.ts
cpq-frontend/src/__tests__/: integration.test.tsx  validation.test.ts
cpq-frontend/src/components/: FormPrimitives.tsx
